--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,7 +1,6 @@
 .footer {
   text-align: center;
   padding: 20px;
-  background-color: #000;
-  color: #ccc;
+  color: #262626;
   font-size: 14px;
 }
