--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -94,6 +94,58 @@
         text-decoration: underline;
       }
     }
+    .logout-btn {
+        background: none;
+        border: none;
+        color: inherit;
+        font: inherit;
+        cursor: pointer;
+        padding: 0;
+        margin-left: 0.5rem;
+        text-decoration: underline;
+    }
+    .user-dropdown {
+  position: relative;
+  display: inline-block;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+    font-weight: 600;
+  }
+
+  .logout-hover {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: white;
+    padding: 6px 12px;
+    white-space: nowrap;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  &:hover .logout-hover {
+    display: block;
+    left: -7px;
+  }
+
+  .logout-hover button {
+    background: transparent;
+    border: none;
+    color: #333;
+    font: inherit;
+    cursor: pointer;
+    padding: 0;
+  }
+
+  .logout-hover button:hover {
+    color: #c00;
+  }
+}
+
+
 
     span {
       margin: 0 5px;
