Додано адмін панель та нові ролі (role:admin)

--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -58,10 +58,14 @@
   }
 
   .success {
-    color: green;
-  }
+  color: green;
+  margin-top: 8px;
+  font-size: 0.95rem;
+}
 
-  .error {
-    color: red;
-  }
+.error {
+  color: red;
+  margin-top: 8px;
+  font-size: 0.95rem;
+}
 }
