--- a/client/src/pages/Bag/Bag.scss
+++ b/client/src/pages/Bag/Bag.scss
@@ -127,5 +127,13 @@
       text-decoration: underline;
       color: #333;
     }
+    
+    
+  }
+  .empty-bag {
+      font-size: 1.2rem;
+      text-align: center;
+      margin-top: 2rem;
+      color: #666;
   }
 }
