--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,8 +1,11 @@
+@import "../../styles/breakpoints";
+
 .prilipko-header {
   position: relative;
   font-family: "Arial", sans-serif;
   z-index: 999;
 }
+
 
 // ✶ кнопка меню
 .menu-toggle {
@@ -22,7 +25,6 @@
   left: -240px;
   width: 240px;
   height: 100%;
-  background: white;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -50,9 +52,11 @@
     color: black;
     letter-spacing: 1px;
     text-decoration: none;
+    
 
     &:hover {
-      text-decoration: underline;
+      opacity: 0.6;
+      transition: all 0.3s;
     }
   }
 
@@ -72,7 +76,8 @@
       letter-spacing: 0.5px;
 
       &:hover {
-        text-decoration: underline;
+        opacity: 0.6;
+        transition: all 0.3s;
       }
     }
   }
@@ -86,7 +91,8 @@
     text-decoration: none;
 
     &:hover {
-      text-decoration: underline;
+      opacity: 0.6;
+      transition: all 0.3s;
     }
   }
 }
@@ -124,7 +130,7 @@
     }
 
     .logout-btn {
-      background: none;
+      background: transparent;
       border: none;
       color: inherit;
       font: inherit;
@@ -149,11 +155,9 @@
         position: absolute;
         top: 100%;
         left: -7px;
-        background: white;
         padding: 6px 12px;
         white-space: nowrap;
         border-radius: 6px;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
       }
 
       &:hover .logout-hover {
@@ -195,4 +199,95 @@
 
 .bag-link.disabled {
   cursor: pointer;
+}
+
+.mobile-auth {
+  display: none;
+}
+
+@media (max-width: $tablet) {
+  .prilipko-sidebar {
+    position: fixed;
+    top: -100vh;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: white;
+    transition: top 0.3s ease-in-out;
+    padding: 100px 20px 40px;
+    overflow-y: auto;
+    z-index: 1100;
+
+    &.open {
+      top: 0;
+    }
+
+    .sidebar-menu {
+      text-align: center;
+      padding: 0;
+      .shop-heading {
+        font-size: 25px;
+        font-weight: 300;
+      }
+      a {
+        font-size: 25px;
+        font-weight: 300;
+      }
+      .shop-sub {
+        padding: 0;
+      }
+    }
+  }
+
+  .menu-toggle {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    font-size: 24px;
+    z-index: 1200;
+  }
+
+  .prilipko-topbar .topbar-links .user-dropdown, span {
+    display: none;
+  }
+
+  .topbar-links a[href="/login"] {
+    display: none;
+  }
+
+  .prilipko-topbar {
+    padding: 0 10px;
+  }
+
+  .mobile-auth {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    width: 100%;
+
+    a {
+      font-size: 18px;
+      font-weight: 400;
+      color: #252525;
+      text-transform: uppercase;
+      text-decoration: none;
+      text-align: center;
+
+      &:hover {
+        opacity: 0.6;
+        transition: all 0.3s;
+      }
+    }
+  }
+}
+
+@media (max-width: $mobile) {
+  .prilipko-topbar {
+    padding: 0 5px;
+  }
+
+  .header_middle_logo img {
+    height: 55px;
+  }
 }
