--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 html, body, #root {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #fff;
+  font-family: "Roboto", sans-serif;
+  background-color: rgba(255, 255, 255, 0.33);
+  background-image: url("./img/background.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   color: #000;
 }
 
