--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -4,13 +4,9 @@
   padding: 40px 20px;
   text-align: center;
 
-  h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
-  }
-
   p {
     font-size: 18px;
     color: #555;
+    margin-top: 30xp;
   }
 }
