--- a/client/src/pages/Admin/Admin.scss
+++ b/client/src/pages/Admin/Admin.scss
@@ -5,7 +5,7 @@
 
 .sidebar {
   width: 220px;
-  background-color: #1e1e2f;
+  background-color: rgba(93, 93, 93, 0.7);
   color: white;
   display: flex;
   flex-direction: column;
@@ -20,6 +20,7 @@
   text-align: left;
   cursor: pointer;
   font-size: 1rem;
+  transition: all .3s ease-in-out;
 }
 
 .sidebar button:hover {
@@ -28,13 +29,13 @@
 
 .content {
   flex: 1;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
-  table-layout: fixed; // 👈 важливо для однакової ширини колонок
+  table-layout: fixed; 
   margin-top: 1rem;
   font-size: 15px;
 }
@@ -49,26 +50,6 @@ th, td {
   white-space: nowrap;
 }
 
-// Фіксовані ширини колонок (налаштуй під себе)
-th:nth-child(1),
-td:nth-child(1) { width: 180px; }
-
-th:nth-child(2),
-td:nth-child(2) { width: 220px; }
-
-th:nth-child(3),
-td:nth-child(3) { width: 160px; }
-
-th:nth-child(4),
-td:nth-child(4) { width: 100px; }
-
-th:nth-child(5),
-td:nth-child(5) { width: 120px; }
-
-th:nth-child(6),
-td:nth-child(6) { width: 250px; }
-
-// Інпути — розтягуються по ширині td
 td input {
   width: 100%;
   box-sizing: border-box;
@@ -96,6 +77,7 @@ button {
   padding: 5px 10px;
   font-size: 14px;
   cursor: pointer;
+  
 }
 
 .sidebar button {
@@ -144,8 +126,9 @@ button {
 }
 
 textarea {
-  height: auto !important; /* або задай конкретну висоту */
+  height: auto !important;
   min-height: 60px;
+  width: 100%;
 }
 
 .modal-buttons {
