--- a/client/src/pages/Bag/Bag.scss
+++ b/client/src/pages/Bag/Bag.scss
@@ -1,6 +1,7 @@
+@import "../../styles/mixins";
+
 .bag-wrapper {
   padding: 80px 40px;
-  background: #f4f4f4;
   font-family: Arial, sans-serif;
   color: #111;
 
@@ -80,7 +81,6 @@
     flex: 1;
     border: 1px solid #000;
     padding: 30px;
-    background: white;
 
     .line {
       display: flex;
@@ -98,15 +98,7 @@
     }
 
     .checkout {
-      width: 100%;
-      padding: 12px;
-      background: #000;
-      color: white;
-      border: none;
-      text-transform: uppercase;
-      cursor: pointer;
-      margin-top: 20px;
-      font-weight: bold;
+      @include buttonStyle;
     }
 
     .terms {
@@ -124,8 +116,11 @@
       display: inline-block;
       margin-top: 20px;
       font-size: 13px;
-      text-decoration: underline;
       color: #333;
+      &:hover {
+        opacity: 0.75;
+        transition: all 0.3s ease-in-out;
+      }
     }
     
     
