--- a/client/src/pages/Checkout/CheckoutLogin.scss
+++ b/client/src/pages/Checkout/CheckoutLogin.scss
@@ -1,9 +1,9 @@
+@import "../../styles/mixins";
+
 .checkout-login {
   max-width: 500px;
   margin: 100px auto;
   padding: 40px;
-  background: #f9f9f9;
-  border: 1px solid #ccc;
   font-family: Arial, sans-serif;
   text-align: center;
 
@@ -21,40 +21,36 @@
     margin-bottom: 12px;
     border: 1px solid #aaa;
     font-size: 14px;
-  }
-
-  .full-btn {
-    width: 100%;
-    padding: 12px;
-    background: black;
-    color: white;
-    font-weight: bold;
-    text-transform: uppercase;
     border: none;
-    margin-bottom: 30px;
-    cursor: pointer;
-    transition: background 0.2s;
-
-    &:hover {
-      background: #333;
+    box-sizing: border-box;
+    outline: none;
+    transition: border-width 0.3s ease;
+    border: 1px solid #ccc;
+    &:focus {
+      border: 1px solid #000000;
     }
   }
 
+  .full-btn {
+    @include buttonStyle;
+  }
+
   .border-btn {
+    background: #ffffff;
     width: 100%;
-    padding: 12px;
-    background: white;
-    color: black;
-    border: 1px solid black;
-    font-weight: bold;
-    text-transform: uppercase;
+    color: #000000;
+    height: 35px;
+    transition: background-color 0.3s ease-in-out;
+    font-size: 16px;
+    border: none;
     cursor: pointer;
-    transition: all 0.2s;
-    margin-top: 10px;
+    text-transform: uppercase;
+    border: 2px solid #000;
 
     &:hover {
-      background: #000;
-      color: #fff;
+      background-color: #000;
+      border: none;
+      color: #ffffff;
     }
   }
 
