--- a/client/src/pages/Order/OrderSuccess.scss
+++ b/client/src/pages/Order/OrderSuccess.scss
@@ -1,17 +1,16 @@
+@import "../../styles/mixins";
+
 .order-success {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 80vh;
-  background: #f9f9f9;
   padding: 2rem;
 
   .order-box {
-    background: white;
     padding: 3rem 2rem;
     border-radius: 12px;
     text-align: center;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
 
     h1 {
       font-size: 2rem;
@@ -26,16 +25,10 @@
     }
 
     .back-btn {
-      display: inline-block;
-      padding: 0.75rem 1.5rem;
-      background-color: #000;
-      color: #fff;
-      border-radius: 6px;
-      text-decoration: none;
-      transition: background 0.3s;
-
+      transition: all 0.3 ease-in-out;
+      text-transform: uppercase;
       &:hover {
-        background-color: #444;
+        opacity: 0.6;
       }
     }
   }
