--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 html, body, #root {
-  height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
@@ -9,7 +8,7 @@ html, body, #root {
   background-image: url("./img/background.png");
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   color: #000;
 }
 
