--- a/client/src/pages/Bag/Bag.scss
+++ b/client/src/pages/Bag/Bag.scss
@@ -1,4 +1,5 @@
 @import "../../styles/mixins";
+@import "../../styles/breakpoints";
 
 .bag-wrapper {
   padding: 80px 40px;
@@ -130,5 +131,19 @@
       text-align: center;
       margin-top: 2rem;
       color: #666;
+  }
+}
+
+@media (max-width: $mobile) {
+  .bag-wrapper .bag-summary {
+    padding: 15px;
+  }
+
+  .bag-wrapper .bag-summary .line.total {
+    font-size: 12px;
+  }
+
+  .bag-wrapper .bag-summary .terms {
+    text-align: center;
   }
 }
