--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -108,22 +108,22 @@
         border-radius: 4px;
         text-transform: uppercase;
 
-        &.Очікує {
+        &.In.procces {
           background-color: #fff3cd;
           color: #856404;
         }
 
-        &.Підтверджено {
+        &.Confirmed {
           background-color: #d1ecf1;
           color: #0c5460;
         }
 
-        &.Виконано {
+        &.Completed {
           background-color: #d4edda;
           color: #155724;
         }
 
-        &.Скасовано {
+        &.Canceled {
           background-color: #f8d7da;
           color: #721c24;
         }
